非推奨のURLをURIに変更した